updated swagger endpoint
