# docs/swagger.json
@@ -14,7 +14,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/Fruits/": {
+        "/fruits": {
             "get": {
                 "description": "List all Fruits",
                 "consumes": [
@@ -69,7 +69,7 @@
                 }
             }
         },
-        "/Fruits/{id}": {
+        "/fruits/{id}": {
             "get": {
                 "description": "Return Fruit by Id",
                 "consumes": [
